--- a/ERC-20-Yorokobi/package.json
+++ b/ERC-20-Yorokobi/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^2.0.2",
+    "@nomiclabs/hardhat-etherscan": "^3.1.7",
+    "dotenv": "^16.0.3",
     "hardhat": "^2.14.0"
   }
 }
